--- a/pom.xml
+++ b/pom.xml
@@ -8,34 +8,30 @@
 		<version>2.6.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>cosmic.amazing.telegram.BOT</groupId>
-	<artifactId>BOT</artifactId>
+	<groupId>telegram.bot</groupId>
+	<artifactId>telegram.bot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>BOT</name>
-	<description>Cosmic Amazing BOT</description>
+	<name>telegram.bot</name>
+	<description>Demo project for telegram bot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.telegram</groupId>
-			<artifactId>telegrambots-spring-boot-starter</artifactId>
-			<version>5.4.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
