--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+telegrambot.userName=CosmicAmazingBOT
+telegrambot.botToken=2114926358:AAE3IANcB47LrpmQr2dhXuECaJXc5f1ptM0
+telegrambot.webHookPath=https://cosmic-amazing-bot.herokuapp.com/
