--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <groupId>telegram.bot</groupId>
     <artifactId>telegram.bot</artifactId>
+    <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <name>telegram.bot</name>
     <description>Demo project for telegram bot</description>
